set repositories as fetching until they're fully fetched This PR introduces a mechanism to ensure fatal errors do not lead to repositories being incorrectly reprocessed. To do this, when a consumer worker receives a job, it checks if the repository has the `fetching` status. If it does, it means there was a fatal error when it started processing and returns an error, which leads to the job being rejected and it's thus sent to the dead letter queue. Immediately after that, the worker sets the status of the repository to `fetching` if it's any other status and continues normally until the end, when the status is changed to `not_found`, `fetched` or `pending` depending on the circumstances at the end of the process.
Signed-off-by: Miguel Molina <miguel@erizocosmi.co>

--- a/glide.yaml
+++ b/glide.yaml
@@ -25,9 +25,9 @@ import:
   - storage/filesystem
   - utils/ioutil
 - package: gopkg.in/src-d/go-kallax.v1
-  version: ^1.2.7
+  version: 1.2.x
 - package: gopkg.in/src-d/core-retrieval.v0
-  version: 066728d73336d0685822ab5549e3cd106a85ab4d
+  version: 86edcacd5511381170a836d5ddd0ae062d075e46
   subpackages:
   - model
   - repository
