--- a/glide.yaml
+++ b/glide.yaml
@@ -25,9 +25,9 @@ import:
   - storage/filesystem
   - utils/ioutil
 - package: gopkg.in/src-d/go-kallax.v1
-  version: 1.2.x
+  version: ^1.3.1
 - package: gopkg.in/src-d/core-retrieval.v0
-  version: 86edcacd5511381170a836d5ddd0ae062d075e46
+  version: 6a67746f6ec820392eb0b8253d8150717f14d8ee
   subpackages:
   - model
   - repository
