--- a/borges-producer.yml
+++ b/borges-producer.yml
@@ -10,8 +10,8 @@ spec:
     spec:
       containers:
       - name: borges
-        image: quay.io/srcd/borges:v0.7.0
-        command: ['borges','producer','--mentionsqueue=rovers']
+        image: quay.io/srcd/borges:v0.8.1
+        command: ['borges','producer','--mentionsqueue=rovers', '--metrics']
         env:
         - name: CONFIG_BROKER
           value: 'amqp://guest:guest@rabbitmq:5672'
