--- a/glide.yaml
+++ b/glide.yaml
@@ -6,14 +6,14 @@ import:
   version: ^1.2.0
 - package: github.com/satori/go.uuid
   version: ^1.1.0
-- package: gopkg.in/src-d/go-billy.v3
-  version: d0dc16de10d86398cc9aba4513a2453b401eceb3
+- package: gopkg.in/src-d/go-billy.v4
+  version: 8067977d87d9eb5abf9080359b978b32335a507b
   repo: https://github.com/src-d/go-billy.git
-- package: gopkg.in/src-d/go-billy-siva.v3
-  version: 763351934333e34370292b308c74bcb71035e22a
+- package: gopkg.in/src-d/go-billy-siva.v4
+  version: f93fdd282164999ad17f1d75eae1b435075797ae
   repo: https://github.com/src-d/go-billy-siva.git
 - package: gopkg.in/src-d/go-git.v4
-  version: b08cc8dc5450981530af3e6f6ad1159ae8ea8705
+  version: d92d437af0fb23865c79e45b4acd3d7544593260
   repo: https://github.com/src-d/go-git.git
   subpackages:
   - config
@@ -28,10 +28,11 @@ import:
 - package: gopkg.in/src-d/go-kallax.v1
   version: ^1.3.1
 - package: gopkg.in/src-d/core-retrieval.v0
-  version: 717f593d1c713dda02451939b54cdd537d19a326
+  version: 648fed91f1198add548d110f221d8dd507b38ce7
   subpackages:
   - model
   - repository
+  repo: https://github.com/src-d/core-retrieval.git
 - package: gopkg.in/src-d/framework.v0
   version: 0cdb1d20af0bbdec954974214ad0f5062ffe4289
   subpackages:
@@ -43,8 +44,8 @@ import:
 - package: github.com/coreos/etcd
   version: e0843c691b768b873d6d2b8d49d3f9dba808183f
 testImport:
-- package: github.com/src-d/go-git-fixtures
-  version: 03ddd4bf3d4a1baf61e72fd8ee4746db9005f5e7
+- package: gopkg.in/src-d/go-git-fixtures.v3
+  version: ed7fd5f9824927bd7ba31d92f4a7073cfb95c78f
 - package: github.com/stretchr/testify
   subpackages:
   - assert
