ci: validate that dep ensure is correct
Signed-off-by: Santiago M. Mola <santi@mola.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ before_script:
 
 script:
   - make test-coverage
+  - go get github.com/golang/dep/cmd/dep
+  - dep ensure
+  - make no-changes-in-commit
 
 before_deploy:
   - make packages
