--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,6 +33,10 @@
   name = "gopkg.in/src-d/go-kallax.v1"
   version = "1.3.4"
 
+[[constraint]]
+  name = "gopkg.in/src-d/go-queue.v1"
+  version = "~1.0.2"
+
 [prune]
   unused-packages = true
   go-tests = true
