--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -19,6 +19,12 @@
 [[constraint]]
   name = "gopkg.in/src-d/go-billy.v4"
   source = "https://github.com/src-d/go-billy.git"
+  version = "4.2.0"
+
+[[override]]
+  name = "gopkg.in/src-d/go-billy-siva.v4"
+  source = "https://github.com/src-d/go-billy-siva.git"
+  version = "4.2.0"
 
 [[constraint]]
   name = "gopkg.in/src-d/go-git-fixtures.v3"
@@ -27,7 +33,7 @@
 [[constraint]]
   name = "gopkg.in/src-d/go-git.v4"
   source = "https://github.com/src-d/go-git.git"
-  version = "4.4.1"
+  version = "4.5.0"
 
 [[constraint]]
   name = "gopkg.in/src-d/go-kallax.v1"
