--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,7 @@ before_script:
 
 script:
   - make test-coverage
-  - go get github.com/golang/dep/cmd/dep
-  - dep ensure
-  - make no-changes-in-commit
+  - make godep no-changes-in-commit
 
 before_deploy:
   - make packages
