travis: use docker-push-latest-release
Signed-off-by: Javi Fontan <jfontan@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,4 @@ deploy:
     tags: true
 
 after_deploy:
-  - export DOCKER_PUSH_LATEST=$(echo ${TRAVIS_BRANCH} | grep -E '^v[[:digit:]]+\.[[:digit:]]+\.[[:digit:]]+$') || true
-  - make docker-push
+  - make docker-push-latest-release
