--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -18,7 +18,7 @@
 [[constraint]]
   name = "gopkg.in/src-d/go-billy.v4"
   source = "https://github.com/src-d/go-billy.git"
-  version = "4.2.0"
+  version = "4.3.0"
 
 [[constraint]]
   name = "gopkg.in/src-d/go-git-fixtures.v3"
@@ -40,6 +40,10 @@
 [[constraint]]
   name = "github.com/lib/pq"
   branch = "master"
+
+[[constraint]]
+  name = "gopkg.in/src-d/go-billy-gluster.v0"
+  revision = "a14b481441bb5ba7cba3c48cb3eb570f1c7fb5fd"
 
 [[override]]
   name = "gopkg.in/src-d/go-billy-siva.v4"
