build: setup and run gluster tests for borges-tool
Signed-off-by: Javi Fontan <jfontan@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,10 @@ services:
 
 before_script:
   - psql -c 'create database testing;' -U postgres
+  - make container
 
 script:
-  - make test-coverage
+  - GO_TAGS="norwfs gluster" make test-coverage
   - make codecov
   - make godep no-changes-in-commit
 
