--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -27,7 +27,7 @@
 [[constraint]]
   name = "gopkg.in/src-d/go-git.v4"
   source = "https://github.com/src-d/go-git.git"
-  version = "4.10.0"
+  revision = "af1e3817a80cccb560b25b0fd3343894754020ba"
 
 [[constraint]]
   name = "gopkg.in/src-d/go-kallax.v1"
